--- a/CodigosHTML/PaginaHomeHTML.html
+++ b/CodigosHTML/PaginaHomeHTML.html
@@ -13,9 +13,9 @@
                 <div class="menu">
                     <a href="#">Home</a>
                     <!-- a href="#">Comunidade</a -->
-                    <a href="../Hanna Kuppas/pagLogin.html">Login</a>
+                    <a href="../Hanna Kuppas/PaginaDeLogin.html">Login</a>
                     <!-- a href="#">Cadastro</a -->
-                    <a href="../Hanna Kuppas/pagRegistro.html"> Cadastro</a>
+                    <a href="../Hanna Kuppas/PaginaDeRegistro.html"> Cadastro</a>
                 </div>
             </div>
         </header>
