--- a/CodigosHTML/PaginaHomeHTML.html
+++ b/CodigosHTML/PaginaHomeHTML.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <!-- tittle>Hanna Kuppas</tittle -->
-        <link href="../Hanna Kuppas/css/style.css" rel="stylesheet">
+        <link href="../REPOSITORIOPI/Hanna Kuppas/CodigosCSS/style.css" rel="stylesheet">
         <meta name="viewport" content="with=device-width, initial-scale=1.0, maximum-scale=1.0">
         <title>Home</title>
     </head>
@@ -13,9 +13,9 @@
                 <div class="menu">
                     <a href="#">Home</a>
                     <!-- a href="#">Comunidade</a -->
-                    <a href="../Hanna Kuppas/PaginaDeLogin.html">Login</a>
+                    <a href="../REPOSITORIOPIanna Kuppas/CodigosHTML/PaginaDeLoginHTML.html">Login</a>
                     <!-- a href="#">Cadastro</a -->
-                    <a href="../Hanna Kuppas/PaginaDeRegistro.html"> Cadastro</a>
+                    <a href="../REPOSITORIOPI/Hanna Kuppas/CodigosHTML/PaginaDeRegistroHTML.html"> Cadastro</a>
                 </div>
             </div>
         </header>
