--- a/CodigosHTML/PaginadeRegistroHTML.html
+++ b/CodigosHTML/PaginadeRegistroHTML.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <link href="../REPOSITORIOPI/Hanna Kuppas/CodigosCSS/styleRegistro.css" rel="stylesheet">
+    <link href="../REPOSITORIOPI/CodigosCSS/styleRegistro.css" rel="stylesheet">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
     <title>Cadastro</title>
 
@@ -38,11 +38,11 @@
             <input id="btn-submit" type="submit" value="Registrar">
             </div>
             <div>
-                <label>Já tem uma conta no site? <a href="../REPOSITORIOPI/Hanna Kuppas/CodigosHTML/PaginaDeLoginHTML.html">Clique aqui</a></label>
+                <label>Já tem uma conta no site? <a href="../REPOSITORIOPI/CodigosHTML/PaginaDeLoginHTML.html">Clique aqui</a></label>
             </div>
         </form>
         </div>
         <p class="error-validation template"></p>
-    <script src="../REPOSITORIOPI/Hanna Kuppas/CodigosJavaScript/scriptRegistro.js"></script>
+    <script src="../REPOSITORIOPI/CodigosJavaScript/scriptRegistro.js"></script>
     </body>
 </html>
