--- a/CodigosHTML/PaginaDeLoginHTML.html
+++ b/CodigosHTML/PaginaDeLoginHTML.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../REPOSITORIOPI/Hanna Kuppas/CodigosCSS/styleRegistro.css">
+    <link rel="stylesheet" href="../REPOSITORIOPI/CodigosCSS/styleRegistro.css">
     <title>Login</title>
 </head>
 <body>
@@ -23,10 +23,10 @@
             <input id="btn-submit" type="submit" value="Login">
         </div>
         <div>
-            <label>O quê? Você ainda nao se registrou no site? <a href="../REPOSITORIOPI/Hanna Kuppas/CodigosHTML/PaginaDeRegistroHTML.html">Clique aqui</a></label>
+            <label>O quê? Você ainda nao se registrou no site? <a href="../REPOSITORIOPI/CodigosHTML/PaginaDeRegistroHTML.html">Clique aqui</a></label>
         </div>
         <p class="error-validation template"></p>
-        <script src="../REPOSITORIOPI/Hanna Kuppas/CodigosCSS/jsLogin.js"></script>
+        <script src="../REPOSITORIOPI/CodigosCSS/jsLogin.js"></script>
     </div>
 </body>
 </html>
