--- a/NovoBancoDeDados/PaginadeRegistroHTML.html
+++ b/NovoBancoDeDados/PaginadeRegistroHTML.html
@@ -1,4 +1,8 @@
+<?php
+session_start();
+?>
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <link href="../REPOSITORIOPI/CodigosCSS/styleRegistro.css" rel="stylesheet">
@@ -7,6 +11,12 @@
 
 </head>
 <div id="main-container">
+    <?php
+		if(isset($_SESSION['msg'])){
+			echo $_SESSION['msg'];
+			unset($_SESSION['msg']);
+		}
+		?>
     <h1>Cadastre-se para acessar o sistema.</h1>
     <form id="register-form" method="POST" action="Processa.php">
         <div class="full-box">
