--- a/NovoBancoDeDados/index.html
+++ b/NovoBancoDeDados/index.html
@@ -1,6 +1,4 @@
-<?php
-session_start();
-?>
+
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
@@ -9,19 +7,10 @@ session_start();
 	</head>
 	<body>
 		<h1>Cadastrar Usuário</h1>
-		<?php
-		if(isset($_SESSION['msg'])){
-			echo $_SESSION['msg'];
-			unset($_SESSION['msg']);
-		}
-		?>
+
 		<form method="POST" action="processa.php">
 			<label>Nome: </label>
-			<input type="text" name="nome" placeholder="Digite o nome "><br><br>
-			<label>Sobrenome: </label>
-			<input type="text" name="sobrenome" placeholder="Digite o Sobrenome"><br><br>
-			<label>Senha: </label>
-			<input type="text" name="Senha" placeholder="Digite a Senha"><br><br>
+			<input type="text" name="nome" placeholder="Digite o nome completo"><br><br>
 			
 			<label>E-mail: </label>
 			<input type="email" name="email" placeholder="Digite o seu melhor e-mail"><br><br>
