Adição De Conteúdo

--- a/Hanna Kuppas/index.html
+++ b/Hanna Kuppas/index.html
@@ -24,6 +24,10 @@
 
         <section class="sobre">
 
+            <div class="marca">
+                <img src="img/LogoEditada.jpeg" height="120px" width="140px">
+            </div>
+
             <div class="extras">
                 <!-- Div do Social Media-->
             </div>
