--- a/Hanna Kuppas/index.html
+++ b/Hanna Kuppas/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="icone">
-                <img src="img/Icone.jpg">
+                <!-- img src="img/Icone.jpg" -->
             </div>
 
             <div class="center">
