--- a/Hanna Kuppas/pagRegistro.html
+++ b/Hanna Kuppas/pagRegistro.html
@@ -1,19 +1,3 @@
-<?php
-if(isset($_POST['submit'])){
-    include_once('Conexao.php');
-    $Nome = $_POST['name'];
-    $Sobrenome = $_POST['lastname'];
-    $Senha = $_POST['password'];
-    $Email = $_POST['email'];
-
-  $result = mysqli_query($conn, "INSERT INTO clientes (nome, sobrenome, senha, email)
-   VALUES ('$Nome','$Sobrenome','$Senha','$Email')");
-}
-
-
-?>
-
-
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
@@ -38,7 +22,7 @@ if(isset($_POST['submit'])){
         </header>
         <div id="main-container">
         <h1>Cadastre-se para acessar o sistema.</h1>
-        <form action="pagRegistro.php" id="register-form"  method="POST">
+        <form id="register-form" action="">
             <div class="full-box">
             <label for="email">E-mail</label>
             <input type="email" name="email" id="email" placeholder="Digite seu e-mail" data-min-length="2" data-email-validate>
@@ -64,7 +48,7 @@ if(isset($_POST['submit'])){
             <label for="agreement" id="agreement-label">Eu li e aceito os <a href="#">termos de uso.</a></label>
             </div>
             <div class="full-box">
-            <input id="btn-submit" type="submit" name="submit" value="Registrar">
+            <input id="btn-submit" type="submit" value="Registrar">
             </div>
             <div>
                 <label>Já tem uma conta no site? <a href="../Hanna Kuppas/pagLogin.html">Clique aqui.</a></label>
@@ -72,6 +56,6 @@ if(isset($_POST['submit'])){
         </form>
         </div>
         <p class="error-validation template"></p>
-    <script src="C:\wamp64\www\UltimoVirtualHost\Hanna Kuppas\js\scriptRegistro.js"></script>
+    <script src="../Hanna Kuppas/js/scriptRegistro.js"></script>
     </body>
 </html>
