Mudei o caminho da script registrojs
O caminho anterior estava fazendo referencia a um caminho dentro do meu computador, que não existia no repositorio

--- a/Hanna Kuppas/pagRegistro.html
+++ b/Hanna Kuppas/pagRegistro.html
@@ -58,6 +58,6 @@
         </form>
         </div>
         <p class="error-validation template"></p>
-    <script src="C:\wamp64\www\UltimoVirtualHost\Hanna Kuppas\js\scriptRegistro.js"></script>
+    <script src="C:\Users\zanin\OneDrive\Documentos\GitHub\RepositorioPI\Hanna Kuppas\js\scriptRegistro.js"></script>
     </body>
 </html>
