--- a/Hanna Kuppas/index.html
+++ b/Hanna Kuppas/index.html
@@ -64,6 +64,11 @@
                 </div>
 
             </div>
+
+            <div class="navigation">
+                <label for="slide1"></label>
+            </div>
+
         </div>
 
     </body>
