--- a/Hanna Kuppas/index.html
+++ b/Hanna Kuppas/index.html
@@ -46,6 +46,7 @@
                 <input type="radio" name="slide" id="slide1">
                 <input type="radio" name="slide" id="slide2">
                 <input type="radio" name="slide" id="slide3">
+                <input type="radio" name="slide" id="slide4">
 
                 <div class="slide s1">
                     <img src="img/LogoDois.jpeg" alt="">
@@ -67,6 +68,9 @@
 
             <div class="navigation">
                 <label for="slide1"></label>
+                <label for="slide2"></label>
+                <label for="slide3"></label>
+                <label for="slide4"></label>
             </div>
 
         </div>
