--- a/Hanna Kuppas/index.html
+++ b/Hanna Kuppas/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="icone">
-                <img src="img/Icone.jpg">
+                <img src="img/Icone.jpg" style="border-radius: 50%;">
             </div>
 
             <div class="center">
@@ -44,7 +44,7 @@
         <div class="content">
             <div class="slides">
                 <input type="radio" name="slide" id="slide1">
-                <input type="radio" name="slide" id="slide2">
+                <!-- input type="radio" name="slide" id="slide2" -->
                 <input type="radio" name="slide" id="slide3">
                 <input type="radio" name="slide" id="slide4">
 
@@ -52,9 +52,9 @@
                     <img src="img/LogoDois.jpeg" alt="">
                 </div>
 
-                <div class="slide">
+                <!-- div class="slide">
                     <img src="img/Balcao.jpeg" alt="">
-                </div>
+                </div -->
 
                 <div class="slide">
                     <img src="img/BalcaoDois.jpeg" alt="">
@@ -68,7 +68,7 @@
 
             <div class="navigation">
                 <label for="slide1"></label>
-                <label for="slide2"></label>
+                <!-- label for="slide2"></label -->
                 <label for="slide3"></label>
                 <label for="slide4"></label>
             </div>
