--- a/Hanna Kuppas/index.html
+++ b/Hanna Kuppas/index.html
@@ -35,7 +35,7 @@
             <div class="center">
                 <div class="texto-sobre">
                     <h1 style="color: #323232;">Seja Bem Vindo<br>A Agenda Digital<br><span style="color: indianred">HK Estética</span></h1>
-                    <!-- p>A estética Hanna Kupas oferece diversos procedimentos das mais variadas formas, sendo mais de dezoito tipos diferentes de técnicas. Alguns exemplos são a termoterapia, a drenagem linfática, o shiatsu e até mesmo a intradermoterapia pressurizada.<br><br>Além disso, o estabelecimento também oferece atendimento de nutricionismo, oferecendo desde consultas avulsas a pacotes mensais.</p -->
+                    <p>A estética Hanna Kupas oferece diversos procedimentos das mais variadas formas, sendo mais de dezoito tipos diferentes de técnicas.<br><br>Alguns exemplos são a termoterapia, a drenagem linfática, o shiatsu e até mesmo a intradermoterapia pressurizada.<br><br>Além disso, o estabelecimento também oferece atendimento de nutricionismo, oferecendo desde consultas avulsas a pacotes mensais.</p>
                     <!-- button>Agende</button -->
                 </div>
             </div>
@@ -67,15 +67,14 @@
             </div>
 
             <div class="navigation">
-                <label for="slide1"></label>
+                <label class="bar" for="slide1"></label>
                 <!-- label for="slide2"></label -->
-                <label for="slide3"></label>
-                <label for="slide4"></label>
+                <label class="bar" for="slide3"></label>
+                <label class="bar" for="slide4"></label>
             </div>
 
         </div>
 
     </body>
-
 
 </html>
