--- a/Hanna Kuppas/index.html
+++ b/Hanna Kuppas/index.html
@@ -44,33 +44,55 @@
         <div class="content">
             <div class="slides">
                 <input type="radio" name="slide" id="slide1">
-                <!-- input type="radio" name="slide" id="slide2" -->
+                <input type="radio" name="slide" id="slide2">
                 <input type="radio" name="slide" id="slide3">
                 <input type="radio" name="slide" id="slide4">
+                <input type="radio" name="slide" id="slide5">
+                <input type="radio" name="slide" id="slide6">
+                <input type="radio" name="slide" id="slide7">
 
                 <div class="slide s1">
-                    <img src="img/LogoDois.jpeg" alt="">
+                    <img src="img/Balcao.jpeg" alt="">
                 </div>
 
                 <!-- div class="slide">
-                    <img src="img/Balcao.jpeg" alt="">
+                    <img src="img/Estante.jpeg" alt="">
+                </div>
+
+                <div class="slide">
+                    <img src="img/Deitar.jpeg" alt="">
                 </div -->
 
                 <div class="slide">
-                    <img src="img/BalcaoDois.jpeg" alt="">
+                    <img src="img/EstanteDois.jpeg" alt="">
                 </div>
 
                 <div class="slide">
                     <img src="img/Quadros.jpeg" alt="">
                 </div>
 
+                <div class="slide">
+                    <img src="img/Produto.jpeg" alt="">
+                </div>
+
+                <div class="slide">
+                    <img src="img/ProdutoDois.jpeg" alt="">
+                </div>
+
+                <div class="slide">
+                    <img src="img/Cartao.jpeg" alt="">
+                </div>
+
             </div>
 
             <div class="navigation">
                 <label class="bar" for="slide1"></label>
-                <!-- label for="slide2"></label -->
+                <label class="bar" for="slide2"></label>
                 <label class="bar" for="slide3"></label>
                 <label class="bar" for="slide4"></label>
+                <label class="bar" for="slide5"></label>
+                <label class="bar" for="slide6"></label>
+                <label class="bar" for="slide7"></label>
             </div>
 
         </div>
