--- a/Hanna Kuppas/index.html
+++ b/Hanna Kuppas/index.html
@@ -44,7 +44,7 @@
         <div class="content">
             <div class="slides">
                 <input type="radio" name="slide" id="slide1">
-                <input type="radio" name="slide" id="slide2">
+                <!-- input type="radio" name="slide" id="slide2" -->
                 <input type="radio" name="slide" id="slide3">
                 <input type="radio" name="slide" id="slide4">
                 <input type="radio" name="slide" id="slide5">
@@ -87,7 +87,7 @@
 
             <div class="navigation">
                 <label class="bar" for="slide1"></label>
-                <label class="bar" for="slide2"></label>
+                <!-- label class="bar" for="slide2"></label -->
                 <label class="bar" for="slide3"></label>
                 <label class="bar" for="slide4"></label>
                 <label class="bar" for="slide5"></label>
