--- a/Hanna Kuppas/pagSair.html
+++ b/Hanna Kuppas/pagSair.html
@@ -24,9 +24,9 @@
         <br>
         <br>
 
-        <h2 style="text-align: center;"> Você quer mesmo sair?</h2>
+        <!-- h2 style="text-align: center;"> Você quer mesmo sair?</h2 -->
 
-        <div class="texto-sobre">
+        <!-- div class="texto-sobre">
             <button>SIM</button>
         </div>
 
@@ -35,8 +35,14 @@
         </div>
 
         <div class="extras">
-            <!-- Div do Social Media-->
-        </div>
+            <Div do Social Media>
+        </div -->
+
+        <!-- div class="texto-sobre">
+            <button value="SAIR">
+               <script src=""></script>
+        </button -->
+        </div> 
 
     </body>
 </html>
