Só troquei as branchs

--- a/Hanna Kuppas/pagRegistro.html
+++ b/Hanna Kuppas/pagRegistro.html
@@ -13,12 +13,12 @@
             <div class="center">
                 <div class="logo"><img src=""></div>
                 <div class="menu">
-                    <a href="index.html">Home</a>
+                    <a href="index.php">Home</a>
                     <a href="pagProcedimentos.html">Procedimentos</a>
-                    <a href="pagAgenda.html">Agende</a>
-                    <a href="../Hanna Kuppas/pagLogin.html">Login</a>
+                    <a href="pagAgenda.php">Agende</a>
+                    <a href="../Hanna Kuppas/pagLogin.php">Login</a>
                     <!-- a href="../Hanna Kuppas/pagRegistro.html"> Cadastro</a -->
-                    <a href="pagSair.html">Sair</a>
+                    <!--<a href="pagSair.html">Sair</a>-->
                 </div>
             </div>
         </header>
@@ -53,7 +53,7 @@
             <input id="btn-submit" type="submit" name="submit" value="Registrar">
             </div>
             <div>
-                <label>Já tem uma conta no site? <a href="../Hanna Kuppas/pagLogin.html">Clique aqui.</a></label>
+                <label>Já tem uma conta no site? <a href="../Hanna Kuppas/pagLogin.php">Clique aqui.</a></label>
             </div>
         </form>
         </div>
