--- a/Hanna Kuppas/pagProcedimentos.html
+++ b/Hanna Kuppas/pagProcedimentos.html
@@ -11,12 +11,12 @@
             <div class="center">
                 <div class="logo"><img src=""></div>
                 <div class="menu">
-                    <a href="index.html">Home</a>
+                    <a href="index.php">Home</a>
                     <a href="pagProcedimentos.html">Procedimentos</a>
-                    <a href="pagAgenda.html">Agende</a>
-                    <a href="../Hanna Kuppas/pagLogin.html">Login</a>
+                    <a href="pagAgenda.php">Agende</a>
+                    <a href="pagLogin.php">Login</a>
                     <!-- a href="../Hanna Kuppas/pagRegistro.html"> Cadastro</a -->
-                    <a href="pagSair.html">Sair</a>
+                    <a href="pagSair.php">Sair</a>
                 </div>
             </div>
         </header>
